--- a/TaskManagerJSP/WebContent/css/style.css
+++ b/TaskManagerJSP/WebContent/css/style.css
@@ -1,5 +1,43 @@
 @charset "UTF-8";
 
+pre {
+	font-family: monospace, monospace;
+	/* 1 */
+	font-size: 1em;
+	/* 2 */
+}
+
+code, kbd, samp {
+	font-family: monospace, monospace;
+	/* 1 */
+	font-size: 1em;
+	/* 2 */
+}
+
+button, input, optgroup, select, textarea {
+	font-family: sans-serif;
+	/* 1 */
+	font-size: 100%;
+	/* 1 */
+	line-height: 1.15;
+	/* 1 */
+	margin: 0;
+	/* 2 */
+}
+
+button, input, optgroup, select, textarea {
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+		Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+}
+
+html {
+	line-height: 1.5;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+		Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+	font-weight: normal;
+	color: rgba(0, 0, 0, 0.87);
+}
+
 /* Style inputs, select elements and textareas */
 input[type=text], select, textarea {
 	width: 100%;
@@ -18,7 +56,7 @@ label {
 
 /* Style the submit button */
 input[type=submit] {
-	background-color: #4CAF50;
+	background-color: #85CDF5;
 	color: white;
 	padding: 12px 20px;
 	border: none;
